# FinanceR

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: Graphmaker.py  main.py  transaction.py
src/ConsoleGraphMaker/: Graphmaker.py
src/FinanceR/: TransactionHistory.py  main.py  transaction.py
tests/: conftest.py  test_GraphMaker.py  test_TransactionHistory.py
