[metadata]
name = FinanceR
description = Get useful data
author = August Brandt
platforms = unix, linux, win32
classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages = 
    FinanceR
    ConsoleGraphMaker
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extra_require]
testing = 
    pytest>=8.0

[options.package_data]
FinanceR = py.typed
ConsoleGraphMaker = py.typed
